# natural_query_lib

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: natural_query_lib.yaml
natural_query/: enums.py  exceptions.py  executor.py  query_builder.py
natural_query_lib/: __init__.py  query_builder.py
src/natural_query_lib/: __init__.py  executor.py  query_builder.py
src/natural_query_lib_stescobedo/: __init__.py
tests/: test_query_builder.py
