[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "natural-query-lib"
version = "0.1.0"
description="flexible SQL query builder written in Python! This library allows you to build and execute SQL queries with ease, while supporting dynamic parameters and JSON encoding for database compatibility."
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Sergio Triana Escobedo", email = "stescobedo.31@gmail.com"}]
homepage = "https://github.com/stescobedo92/natural_query_lib"
repository = "https://github.com/stescobedo92/natural_query_lib"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["asyncpg"]
requires-python = ">=3.7"

[tool.setuptools.packages.find]
include = ["natural_query"]
