[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "natural_query_lib"
version = "0.1.0"
description = "Flexible SQL query builder written in Python! This library allows you to build and execute SQL queries with ease, while supporting dynamic parameters and JSON encoding for database compatibility."
readme = "README.md"
license = {text = "MIT License"}
authors = [{name = "Sergio Triana Escobedo", email = "stescobedo.31@gmail.com"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database :: Front-Ends",
    "Framework :: AsyncIO",
]
dependencies = ["asyncpg"]
requires-python = ">=3.7"

[tool.setuptools.packages.find]
include = ["natural_query_lib"]

