[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "natural_query_lib"
version = "0.1.1"
description = "Flexible SQL query builder written in Python! This library allows you to build and execute SQL queries with ease, while supporting dynamic parameters and JSON encoding for database compatibility."
readme = "README.md"
license = {text = "MIT License"}
authors = [{name = "Sergio Triana Escobedo", email = "stescobedo.31@gmail.com"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["asyncpg"]
requires-python = ">=3.7"

[tool.setuptools.packages.find]
include = ["natural_query_lib"]

